--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "use-openapi",
-  "version": "0.1.0",
+  "version": "0.1.4",
   "description": "Generate routes from openapi object.",
   "main": "dist/index.js",
   "typings": "dist/index.d.ts",
@@ -16,6 +16,17 @@
     "build": "tsc",
     "clean": "rimraf dist",
     "prepublish": "npm run -s clean && npm run -s build"
+  },
+  "dependencies": {
+    "ajv": "^6.12.6",
+    "clone": "^2.1.2",
+    "dag-map": "^2.0.2",
+    "decimal.js": "^10.2.1",
+    "lodash.get": "^4.4.2",
+    "lodash.merge": "^4.6.2",
+    "openapi-types": "^7.0.1",
+    "rimraf": "^3.0.2",
+    "traverse": "^0.6.6"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^2.3.3",
@@ -37,16 +48,5 @@
     "type": "git",
     "url": "git+https://github.com/sigoden/use-openapi.git"
   },
-  "license": "MIT",
-  "dependencies": {
-    "ajv": "^6.12.6",
-    "clone": "^2.1.2",
-    "dag-map": "^2.0.2",
-    "decimal.js": "^10.2.1",
-    "lodash.get": "^4.4.2",
-    "lodash.merge": "^4.6.2",
-    "openapi-types": "^7.0.1",
-    "rimraf": "^3.0.2",
-    "traverse": "^0.6.6"
-  }
+  "license": "MIT"
 }
