--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "use-openapi",
-  "version": "0.3.2",
+  "version": "0.3.4",
   "description": "Generate routes from openapi object.",
   "main": "dist/index.js",
   "typings": "dist/index.d.ts",
@@ -21,6 +21,7 @@
     "ajv": "^6.12.6",
     "dag-map": "^2.0.2",
     "decimal.js": "^10.2.1",
+    "jsona-openapi-js": "^0.1.12",
     "lodash.get": "^4.4.2",
     "lodash.merge": "^4.6.2",
     "openapi-types": "^7.0.1",
