feat: upgrade jsona-openapi-js

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "use-openapi",
-  "version": "0.3.6",
+  "version": "0.3.8",
   "description": "Generate routes from openapi object.",
   "main": "dist/index.js",
   "typings": "dist/index.d.ts",
@@ -21,20 +21,21 @@
     "ajv": "^6.12.6",
     "dag-map": "^2.0.2",
     "decimal.js": "^10.2.1",
-    "jsona-openapi-js": "^0.1.12",
+    "jsona-openapi-js": "^0.3.0",
     "lodash.get": "^4.4.2",
     "lodash.merge": "^4.6.2",
-    "openapi-types": "^7.0.1",
     "traverse": "^0.6.6"
   },
   "devDependencies": {
+    "@types/jest": "^26.0.23",
     "@typescript-eslint/eslint-plugin": "^2.3.3",
     "@typescript-eslint/parser": "^2.3.3",
     "eslint": "^6.5.1",
     "jest": "^26.6.1",
     "rimraf": "^3.0.2",
     "ts-jest": "^26.4.3",
-    "typescript": "^4.0.5"
+    "typescript": "^4.0.5",
+    "v": "^0.3.0"
   },
   "keywords": [
     "openapi",
